--- a/src/app/modules/admin/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/modules/admin/components/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
+<!--<app-button-create [value]="prueba"></app-button-create>-->
 <app-footer></app-footer>
