--- a/src/app/modules/admin/components/header/header.component.html
+++ b/src/app/modules/admin/components/header/header.component.html
@@ -13,13 +13,7 @@
                     </a>
                 </li>
                 <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" routerLink="./about">About</a>
-                </li>
-                <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" routerLink="./services">Services</a>
-                </li>
-                <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" routerLink="./contact">Contact</a>
+                    <a class="nav-link" routerLink="./list">Plantilla del Liverpool</a>
                 </li>
                 <li class=" btn-primary nav-item text-white" role="button">
                     <a class="nav-link text-white" (click)="logout()">logout</a>
