--- a/src/app/modules/admin/components/home/home.component.html
+++ b/src/app/modules/admin/components/home/home.component.html
@@ -1,46 +1,16 @@
+<div class="mt-5" style="border-color:2px solid red; margin:auto;display:flex;align-items: center;justify-content: center;">
+    <img style="border-color:2px solid red;width: 30%;display:flex;align-items: center;justify-content: center;" src="../../../../../assets/images/liverpool.jpg" alt="Escudo del Liverpool">
+</div>
 <div class="container pt-5 pb-5">
     <div class="col-12">
         <div class="d-flex flex-wrap justify-content-between">
-            <div class="card shadow mt-2">
-                <div class="card-body">
-                    <h5 class="card-title">Admin Component</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card shadow mt-2">
-                <div class="card-body">
-                    <h5 class="card-title">Admin Component</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card shadow mt-2">
-                <div class="card-body">
-                    <h5 class="card-title">Admin Component</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card shadow mt-2">
-                <div class="card-body">
-                    <h5 class="card-title">Admin Component</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card shadow mt-2">
-                <div class="card-body">
-                    <h5 class="card-title">Admin Component</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card shadow mt-2">
-                <div class="card-body">
-                    <h5 class="card-title">Admin Component</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a class="btn btn-primary">Go somewhere</a>
+            <div class="card shadow m-auto">
+                <div class="card-body d-flex align-items-center justify-content-center flex-column">
+                    <h5 class="card-title text-center">Plantilla del Liverpool</h5>
+                    <p class="card-text">Gestiona la plantilla de uno de los clubes
+                        ingleses más laubreados de la historia.
+                    </p>
+                    <a routerLink="/admin/list" class="btn btn-primary">Ver plantilla</a>
                 </div>
             </div>
         </div>
