--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
         <div class="card my-auto shadow">
             <div class="card-body px-5">
                 <div class="text-center">
-                    <fa-icon [icon]="faLock" class="fa-3x"></fa-icon>
+                    <img style="width:15%" src="../../../assets/images/liverpool.jpg" alt="Logo del Liverpool">
                 </div>
                 <div class="text-center">
                     <h2>Welcome</h2>
