--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,10 @@
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+body {
+    background-image: url("../src/assets/images/background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index:-1;
+}
